# cmap_builder

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: check_black.yml  run_tests.yml
cmap_builder/: __init__.py  utils.py
cmap_builder/tests/: test_cmap_builder.py  test_utils.py
docs/: conf.py  index.rst  requirements.txt
docs/dev_reference/: cmap_builder.rst  index.rst  utils.rst
docs/gallery/: Create_a_custom_colormap.nblink  index.rst
examples/: 1-Create_a_custom_colormap.ipynb
