[metadata]
name = cmap_builder
version = 0.1
author = Andrés Pérez Hortal
description = Tools to quickly create custom colormaps for matplotlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aperezhortal/cmap_builder.git
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = matplotlib
include_package_data = True
